objects/OPPLink__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Offering_Release__c</referenceTo>
        <relationshipLabel>OPPLink</relationshipLabel>
        <relationshipName>OPPLink</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>OPPLink</label>
    <nameField>
        <displayFormat>OPPL-{0000000000}</displayFormat>
        <label>OPPL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OPPLink</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>